--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -571,6 +571,22 @@
 		"message": "nome branch",
 		"description": "Options page label: 'branch name'"
 	},
+	"optionSaveWithWebDAV": {
+		"message": "carica su un server WebDAV",
+		"description": "Options page label: 'upload to a WebDAV server'"
+	},
+	"optionWebDAVURL": {
+		"message": "URL",
+		"description": "Options page label: 'URL'"
+	},
+	"optionWebDAVUser": {
+		"message": "identificatore utente",
+		"description": "Options page label: 'user identifier'"
+	},
+	"optionWebDAVPassword": {
+		"message": "password",
+		"description": "Options page label: 'password'"
+	},
 	"optionSaveCreatedBookmarks": {
 		"message": "salva la pagina di un nuovo segnalibro creato",
 		"description": "Options page label: 'save the page of a newly created bookmark'"
