--- a/_locales/pt_br/messages.json
+++ b/_locales/pt_br/messages.json
@@ -571,6 +571,22 @@
 		"message": "nome de branch",
 		"description": "Options page label: 'branch name'"
 	},
+	"optionSaveWithWebDAV": {
+		"message": "upload to a WebDAV server",
+		"description": "Options page label: 'upload to a WebDAV server'"
+	},
+	"optionWebDAVURL": {
+		"message": "URL",
+		"description": "Options page label: 'URL'"
+	},
+	"optionWebDAVUser": {
+		"message": "user identifier",
+		"description": "Options page label: 'user identifier'"
+	},
+	"optionWebDAVPassword": {
+		"message": "password",
+		"description": "Options page label: 'password'"
+	},
 	"optionSaveCreatedBookmarks": {
 		"message": "salvar site de um favorito recém-criado",
 		"description": "Options page label: 'save the page of a newly created bookmark'"
