--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -571,6 +571,22 @@
 		"message": "分支名稱",
 		"description": "Options page label: 'branch name'"
 	},
+	"optionSaveWithWebDAV": {
+		"message": "upload to a WebDAV server",
+		"description": "Options page label: 'upload to a WebDAV server'"
+	},
+	"optionWebDAVURL": {
+		"message": "URL",
+		"description": "Options page label: 'URL'"
+	},
+	"optionWebDAVUser": {
+		"message": "user identifier",
+		"description": "Options page label: 'user identifier'"
+	},
+	"optionWebDAVPassword": {
+		"message": "password",
+		"description": "Options page label: 'password'"
+	},
 	"optionSaveCreatedBookmarks": {
 		"message": "創建新書籤時保存其對應頁面",
 		"description": "Options page label: 'save the page of a newly created bookmark'"
