--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -572,7 +572,7 @@
 		"description": "Options page label: 'branch name'"
 	},
 	"optionSaveWithWebDAV": {
-		"message": "upload to a WebDAV server",
+		"message": "загрузить на WebDAV-сервер",
 		"description": "Options page label: 'upload to a WebDAV server'"
 	},
 	"optionWebDAVURL": {
@@ -580,11 +580,11 @@
 		"description": "Options page label: 'URL'"
 	},
 	"optionWebDAVUser": {
-		"message": "user identifier",
+		"message": "имя пользователя",
 		"description": "Options page label: 'user identifier'"
 	},
 	"optionWebDAVPassword": {
-		"message": "password",
+		"message": "пароль",
 		"description": "Options page label: 'password'"
 	},
 	"optionSaveCreatedBookmarks": {
