--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -175,6 +175,10 @@
 		"message": "dołączaj pasek informacyjny do zapisanej strony",
 		"description": "Options page label: 'include the infobar in the saved page'"
 	},
+	"optionRemoveInfobarSavedDate": {
+		"message": "do not include the saved date",
+		"description": "Options page label: 'do not include the saved date'"
+	},
 	"optionConfirmInfobar": {
 		"message": "otwieraj okno dialogowe z monitem, aby edytować zawartość paska informacyjnego",
 		"description": "Options page label: 'open a prompt dialog to edit the infobar content'"
@@ -262,6 +266,10 @@
 	"optionInsertTextBody": {
 		"message": "umożliwiaj wyszukiwanie tekstu",
 		"description": "Options page label: 'make text searchable'"
+	},
+	"optionsInfobarSubTitle": {
+		"message": "Infobar",
+		"description": "Options sub-title: 'Infobar'"
 	},
 	"optionsImagesSubTitle": {
 		"message": "Obrazy",
