--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -175,6 +175,10 @@
 		"message": "добавить информационную панель в сохраняемую страницу",
 		"description": "Options page label: 'include the infobar in the saved page'"
 	},
+	"optionRemoveInfobarSavedDate": {
+		"message": "do not include the saved date",
+		"description": "Options page label: 'do not include the saved date'"
+	},
 	"optionConfirmInfobar": {
 		"message": "открыть диалоговое окно для редактирования содержимого информационной панели",
 		"description": "Options page label: 'open a prompt dialog to edit the infobar content'"
@@ -262,6 +266,10 @@
 	"optionInsertTextBody": {
 		"message": "make text searchable",
 		"description": "Options page label: 'make text searchable'"
+	},
+	"optionsInfobarSubTitle": {
+		"message": "Infobar",
+		"description": "Options sub-title: 'Infobar'"
 	},
 	"optionsImagesSubTitle": {
 		"message": "Изображения",
