--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -175,6 +175,10 @@
 		"message": "додавати інформ. панель в сторінку що зберігається",
 		"description": "Options page label: 'include the infobar in the saved page'"
 	},
+	"optionRemoveInfobarSavedDate": {
+		"message": "не включати збережену дату",
+		"description": "Options page label: 'do not include the saved date'"
+	},
 	"optionConfirmInfobar": {
 		"message": "відкривати діалогове вікно для редагування вмісту інформаційної панелі",
 		"description": "Options page label: 'open a prompt dialog to edit the infobar content'"
@@ -262,6 +266,10 @@
 	"optionInsertTextBody": {
 		"message": "зробити текст доступним для пошуку",
 		"description": "Options page label: 'make text searchable'"
+	},
+	"optionsInfobarSubTitle": {
+		"message": "Інфобар",
+		"description": "Options sub-title: 'Infobar'"
 	},
 	"optionsImagesSubTitle": {
 		"message": "Зображення",
