--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -176,7 +176,7 @@
 		"description": "Options page label: 'include the infobar in the saved page'"
 	},
 	"optionRemoveInfobarSavedDate": {
-		"message": "do not include the saved date",
+		"message": "не включать дату сохранения",
 		"description": "Options page label: 'do not include the saved date'"
 	},
 	"optionConfirmInfobar": {
@@ -268,7 +268,7 @@
 		"description": "Options page label: 'make text searchable'"
 	},
 	"optionsInfobarSubTitle": {
-		"message": "Infobar",
+		"message": "Информационная панель",
 		"description": "Options sub-title: 'Infobar'"
 	},
 	"optionsImagesSubTitle": {
