--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -295,6 +295,10 @@
 		"message": "wysyłaj zdarzenie \"scroll\"",
 		"description": "Options page label: 'dispatch \"scroll\" event'"
 	},
+	"optionLoadDeferredImagesBeforeFrames": {
+		"message": "ładuj odroczone ramki",
+		"description": "Options page label: 'load deferred frames'"
+	},
 	"optionRemoveAlternativeImages": {
 		"message": "usuwaj obrazy dla alternatywnych rozdzielczości ekranu",
 		"description": "Options page label: 'remove images for alternative screen resolutions'"
