--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -393,7 +393,7 @@
 	},
 	"optionsDeleteDisplayedRulesConfirm": {
 		"message": "Potwierdź usunięcie wszystkich wyświetlanych reguł",
-		"description": "Popup text 'Confirm deletion of all displayed rules'"
+		"description": "Popup text 'Confirm the deletion of all displayed rules'"
 	},
 	"optionsDeleteRulesTooltip": {
 		"message": "Usuń wszystkie wyświetlane reguły",
@@ -518,6 +518,10 @@
 	"optionWarnUnsavedPage": {
 		"message": "ostrzegaj, jeśli opuszczasz stronę z niezapisanymi zmianami",
 		"description": "Title of the button 'warn if leaving page with unsaved changes'"
+	},
+	"optionDisplayInfobarInEditor": {
+		"message": "wyświetlanie paska informacyjnego",
+		"description": "Title of the button 'display the infobar'"
 	},
 	"optionsMiscSubTitle": {
 		"message": "Różne",
