--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -520,7 +520,7 @@
 		"description": "Title of the button 'warn if leaving page with unsaved changes'"
 	},
 	"optionDisplayInfobarInEditor": {
-		"message": "display the infobar",
+		"message": "показать информационную панель",
 		"description": "Title of the button 'display the infobar'"
 	},
 	"optionsMiscSubTitle": {
