--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -393,7 +393,7 @@
 	},
 	"optionsDeleteDisplayedRulesConfirm": {
 		"message": "Confirmez la suppression de toutes les règles affichées",
-		"description": "Popup text 'Confirm deletion of all displayed rules'"
+		"description": "Popup text 'Confirm the deletion of all displayed rules'"
 	},
 	"optionsDeleteRulesTooltip": {
 		"message": "Supprimer toutes les règles affichées",
@@ -477,7 +477,7 @@
 	},
 	"optionsEditorSubTitle": {
 		"message": "Éditeur d'annotations",
-		"description": "Options sub-title: 'Éditeur d'annotations'"
+		"description": "Options sub-title: 'Annotation editor'"
 	},
 	"optionOpenEditor": {
 		"message": "annoter la page avant de la sauvegarder",
@@ -629,7 +629,7 @@
 	},
 	"optionSynchronize": {
 		"message": "synchronizer les options",
-		"description": "Options label: 'Synchronize options'"
+		"description": "Options label: 'synchronize options'"
 	},
 	"optionsResetButton": {
 		"message": "Remise à zéro",
@@ -709,7 +709,7 @@
 	},
 	"profileDeleteConfirm": {
 		"message": "Confirmez la suppression du profil selectionné",
-		"description": "Popup text 'Confirm deletion of the selected profile' in the options page"
+		"description": "Popup text 'Confirm the deletion of the selected profile' in the options page"
 	},
 	"profileRenamePrompt": {
 		"message": "Saisissez un nouveau nom pour le profil sélectionné",
