--- a/_locales/pt_br/messages.json
+++ b/_locales/pt_br/messages.json
@@ -252,23 +252,23 @@
 		"description": "Options page label: 'remove hidden elements'"
 	},
 	"optionsZipContentSubTitle": {
-		"message": "ZIP content",
+		"message": "conteúdo ZIP",
 		"description": "Options page label: 'ZIP content'"
 	},
 	"optionCreateRootDirectory": {
-		"message": "create a root directory",
+		"message": "criar um diretório raiz",
 		"description": "Options page label: 'create a root directory'"
 	},
 	"optionPassword": {
-		"message": "password",
+		"message": "senha",
 		"description": "Options page label: 'password'"
 	},
 	"optionSelfExtractingArchive": {
-		"message": "create self extracting archives",
+		"message": "criar arquivos autoextraíveis",
 		"description": "Options page label: 'create self extracting archives'"
 	},
 	"optionInsertTextBody": {
-		"message": "make text searchable",
+		"message": "tornar texto pesquisável",
 		"description": "Options page label: 'make text searchable'"
 	},
 	"optionsInfobarSubTitle": {
@@ -352,27 +352,27 @@
 		"description": "Options page label: 'scripts'"
 	},
 	"optionResourceVideo": {
-		"message": "videos",
+		"message": "vídeos",
 		"description": "Options page label: 'videos'"
 	},
 	"optionResourceAudio": {
-		"message": "audios",
+		"message": "áudios",
 		"description": "Options page label: 'audios'"
 	},
 	"optionResourceDocument": {
-		"message": "documents",
+		"message": "documentos",
 		"description": "Options page label: 'documents'"
 	},
 	"optionResourceFont": {
-		"message": "fonts",
+		"message": "fontes",
 		"description": "Options page label: 'fonts'"
 	},
 	"optionResourceStylesheet": {
-		"message": "stylesheets",
+		"message": "folhas de estilo",
 		"description": "Options page label: 'stylesheets'"
 	},
 	"optionResourceImage": {
-		"message": "images",
+		"message": "imagens",
 		"description": "Options page label: 'images'"
 	},
 	"optionsDestinationSubTitle": {
@@ -536,7 +536,7 @@
 		"description": "Options page label: 'display stats in the console after processing'"
 	},
 	"optionSetMaxResourceSize": {
-		"message": "set maximum size",
+		"message": "definir tamanho máximo",
 		"description": "Options page label: 'set maximum size'"
 	},
 	"optionMaxResourceSize": {
@@ -544,11 +544,11 @@
 		"description": "Options page label: 'maximum size (MB)'"
 	},
 	"optionSetMaxResourceDelay": {
-		"message": "set maximum download time",
+		"message": "definir tempo máximo de download",
 		"description": "Options page label: 'set maximum download time'"
 	},
 	"optionMaxResourceDelay": {
-		"message": "maximum download time (s)",
+		"message": "tempo máximo de download (s)",
 		"description": "Options page label: 'maximum download time (s)'"
 	},
 	"optionPassReferrerOnError": {
@@ -592,7 +592,7 @@
 		"description": "Options page label: 'branch name'"
 	},
 	"optionSaveWithWebDAV": {
-		"message": "upload to a WebDAV server",
+		"message": "enviar para um servidor WebDAV",
 		"description": "Options page label: 'upload to a WebDAV server'"
 	},
 	"optionWebDAVURL": {
@@ -600,11 +600,11 @@
 		"description": "Options page label: 'URL'"
 	},
 	"optionWebDAVUser": {
-		"message": "user identifier",
+		"message": "identificador do usuário",
 		"description": "Options page label: 'user identifier'"
 	},
 	"optionWebDAVPassword": {
-		"message": "password",
+		"message": "senha",
 		"description": "Options page label: 'password'"
 	},
 	"optionSaveCreatedBookmarks": {
