--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -296,7 +296,7 @@
 		"description": "Options page label: 'dispatch \"scroll\" event'"
 	},
 	"optionLoadDeferredImagesBeforeFrames": {
-		"message": "load deferred frames",
+		"message": "加載延遲加載的框架",
 		"description": "Options page label: 'load deferred frames'"
 	},
 	"optionRemoveAlternativeImages": {
