--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -208,7 +208,7 @@
 		"description": "Options page label: 'characters'"
 	},
 	"optionReplaceEmojisInFilename" : {
-		"message": "用文本替换表情符号",
+		"message": "用文字替换表情符号",
 		"description": "Options page label: 'replace emojis with text'"
 	},
 	"optionConfirmFilename": {
@@ -296,7 +296,7 @@
 		"description": "Options page label: 'dispatch \"scroll\" event'"
 	},
 	"optionLoadDeferredImagesBeforeFrames": {
-		"message": "加载延迟帧",
+		"message": "加载延迟框架",
 		"description": "Options page label: 'load deferred frames'"
 	},
 	"optionRemoveAlternativeImages": {
