add "add metadata to extract data from the page" option
This option allows opening saved pages in all browsers
without needing the extension to be installed.
Saved pages open faster when this option is enabled as
well.

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -271,6 +271,10 @@
 		"message": "Erstellen von selbstextrahierenden Archiven",
 		"description": "Options page label: 'create self extracting archives'"
 	},
+	"optionExtractDataFromPage": {
+		"message": "Metadaten hinzufügen, um Daten von der Seite zu extrahieren",
+		"description": "Options page label: 'add metadata to extract data from the page'"
+	},
 	"optionInsertTextBody": {
 		"message": "Text durchsuchbar machen",
 		"description": "Options page label: 'make text searchable'"
