--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -271,6 +271,10 @@
 		"message": "create self extracting archives",
 		"description": "Options page label: 'create self extracting archives'"
 	},
+	"optionExtractDataFromPage": {
+		"message": "add metadata to extract data from the page",
+		"description": "Options page label: 'add metadata to extract data from the page'"
+	},
 	"optionInsertTextBody": {
 		"message": "make text searchable",
 		"description": "Options page label: 'make text searchable'"
