--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -271,6 +271,10 @@
 		"message": "crear archivos autoextraíbles",
 		"description": "Options page label: 'create self extracting archives'"
 	},
+	"optionExtractDataFromPage": {
+		"message": "agregar metadatos para extraer datos de la página",
+		"description": "Options page label: 'add metadata to extract data from the page'"
+	},
 	"optionInsertTextBody": {
 		"message": "hacer buscable el texto",
 		"description": "Options page label: 'make text searchable'"
