--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -271,6 +271,10 @@
 		"message": "créer des archives auto-extractibles",
 		"description": "Options page label: 'create self extracting archives'"
 	},
+	"optionExtractDataFromPage": {
+		"message": "ajouter des métadonnées pour extraire les données de la page",
+		"description": "Options page label: 'add metadata to extract data from the page'"
+	},
 	"optionInsertTextBody": {
 		"message": "rendre le texte indexable",
 		"description": "Options page label: 'make text searchable'"
