--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -271,6 +271,10 @@
 		"message": "crea archivi autoestraenti",
 		"description": "Options page label: 'create self extracting archives'"
 	},
+	"optionExtractDataFromPage": {
+		"message": "aggiungere metadati per estrarre dati dalla pagina",
+		"description": "Options page label: 'add metadata to extract data from the page'"
+	},
 	"optionInsertTextBody": {
 		"message": "rendi il testo ricercabile",
 		"description": "Options page label: 'make text searchable'"
