--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -271,6 +271,10 @@
 		"message": "twórz samorozpakowujące się archiwa",
 		"description": "Options page label: 'create self extracting archives'"
 	},
+	"optionExtractDataFromPage": {
+		"message": "dodaj metadane, aby wyodrębnić dane ze strony",
+		"description": "Options page label: 'add metadata to extract data from the page'"
+	},
 	"optionInsertTextBody": {
 		"message": "umożliwiaj wyszukiwanie tekstu",
 		"description": "Options page label: 'make text searchable'"
