--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -271,6 +271,10 @@
 		"message": "создать самораспаковывающиеся архивы",
 		"description": "Options page label: 'create self extracting archives'"
 	},
+	"optionExtractDataFromPage": {
+		"message": "добавить метаданные для извлечения данных со страницы",
+		"description": "Options page label: 'add metadata to extract data from the page'"
+	},
 	"optionInsertTextBody": {
 		"message": "сделать текст искабельным",
 		"description": "Options page label: 'make text searchable'"
