--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -271,6 +271,10 @@
 		"message": "kendinden çıkartılabilir arşivler oluştur",
 		"description": "Options page label: 'create self extracting archives'"
 	},
+	"optionExtractDataFromPage": {
+		"message": "sayfadan veri çıkarmak için meta verileri ekle",
+		"description": "Options page label: 'add metadata to extract data from the page'"
+	},
 	"optionInsertTextBody": {
 		"message": "metni aranabilir yap",
 		"description": "Options page label: 'make text searchable'"
