--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -491,6 +491,10 @@
 		"message": "annoter la page avant de la sauvegarder",
 		"description": "Options page label: 'annotate the page before saving'"
 	},
+	"optionOpenSavedPage": {
+		"message": "ouvrir les pages sauvées dans un nouvel onglet",
+		"description": "Options page label: 'open saved pages in a new tab'"
+	},
 	"optionAutoOpenEditor": {
 		"message": "ouvrir les pages sauvées avec SingleFileZ dans l'éditeur d'annotations",
 		"description": "Options page label: 'open pages saved with SingleFileZ in the annotation editor'"
