--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -491,6 +491,10 @@
 		"message": "annotate the page before saving",
 		"description": "Options page label: 'annotate the page before saving'"
 	},
+	"optionOpenSavedPage": {
+		"message": "open saved pages in a new tab",
+		"description": "Options page label: 'open saved pages in a new tab'"
+	},
 	"optionAutoOpenEditor": {
 		"message": "open pages saved with SingleFileZ in the annotation editor",
 		"description": "Options page label: 'open pages saved with SingleFileZ in the annotation editor'"
