--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -491,6 +491,10 @@
 		"message": "在保存前對該頁面進行標註編輯",
 		"description": "Options page label: 'annotate the page before saving'"
 	},
+	"optionOpenSavedPage": {
+		"message": "在新標籤頁中打開保存後的頁面",
+		"description": "Options page label: 'open saved pages in a new tab'"
+	},
 	"optionAutoOpenEditor": {
 		"message": "在標註編輯器中打開用 SingleFileZ 保存的頁面",
 		"description": "Options page label: 'open pages saved with SingleFileZ in the annotation editor'"
