add option "do not append data after the ZIP data"

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -263,6 +263,10 @@
 		"message": "crear un directorio raíz",
 		"description": "Options page label: 'create a root directory'"
 	},
+	"optionPreventAppendedData": {
+		"message": "no añadir datos después de los datos ZIP",
+		"description": "Options page label: 'do not append data after the ZIP data'"
+	},
 	"optionPassword": {
 		"message": "contraseña",
 		"description": "Options page label: 'password'"
