--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -263,6 +263,10 @@
 		"message": "kök dizin oluştur",
 		"description": "Options page label: 'create a root directory'"
 	},
+	"optionPreventAppendedData": {
+		"message": "ZIP verilerinden sonra veri eklemeyin",
+		"description": "Options page label: 'do not append data after the ZIP data'"
+	},
 	"optionPassword": {
 		"message": "parola",
 		"description": "Options page label: 'password'"
