--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -263,6 +263,10 @@
 		"message": "創建根目錄",
 		"description": "Options page label: 'create a root directory'"
 	},
+	"optionPreventAppendedData": {
+		"message": "不要在 ZIP 數據後追加數據",
+		"description": "Options page label: 'do not append data after the ZIP data'"
+	},
 	"optionPassword": {
 		"message": "密碼",
 		"description": "Options page label: 'password'"
