--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -263,6 +263,10 @@
 		"message": "Stammverzeichnis erstellen",
 		"description": "Options page label: 'create a root directory'"
 	},
+	"optionPreventAppendedData": {
+		"message": "Keine Daten nach den ZIP-Daten anhängen",
+		"description": "Options page label: 'do not append data after the ZIP data'"
+	},
 	"optionPassword": {
 		"message": "Passwort",
 		"description": "Options page label: 'password'"
