--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -263,6 +263,10 @@
 		"message": "create a root directory",
 		"description": "Options page label: 'create a root directory'"
 	},
+	"optionPreventAppendedData": {
+		"message": "do not append data after the ZIP data",
+		"description": "Options page label: 'do not append data after the ZIP data'"
+	},
 	"optionPassword": {
 		"message": "password",
 		"description": "Options page label: 'password'"
