--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -263,6 +263,10 @@
 		"message": "créer un répertoire racine",
 		"description": "Options page label: 'create a root directory'"
 	},
+	"optionPreventAppendedData": {
+		"message": "ne pas ajouter de données après les données ZIP",
+		"description": "Options page label: 'do not append data after the ZIP data'"
+	},
 	"optionPassword": {
 		"message": "mot de passe",
 		"description": "Options page label: 'password'"
